tests/main_wrapper/main_wrapper_extra_params_invalid.err.expected
error: at 8:4: [TC-MainBadSignature] In function 'main': takes at most one parameter (an optional '&out i32'), found 2 parameters
   |
 7 | # and mask this signature check.
 8 | fn main(a: i32, b: i32) {
   |    ^^^^
 9 |   entry:
   |
